[package]
name = "game-console"
authors = ["Chris Miller <hello@chrismiller.xyz>"]
version = "0.1.0"
edition = "2021"

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[profile.release]
lto = true

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "7.x.x" }
