[package]
name = "game-console"
authors = ["Chris Miller <hello@chrismiller.xyz>"]
version = "0.1.0"
edition = "2021"

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[profile.release]
lto = true

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7"
bare-metal = { git = "https://github.com/rust-embedded/bare-metal.git", rev = "577042c6d9446ea2806c155a75e68ca8da50866c"}
