[package]
name = "game-console"
authors = ["Chris Miller <hello@chrismiller.xyz>"]
version = "0.1.0"
edition = "2021"

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[profile.release]
lto = true

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
tock-registers = { version = "0.7.x", default-features = false, features = ["register_types"], optional = true }
embedded-graphics = "0.7.1"
linked_list_allocator = {version = "0.9.1", default-features = false, features = ["const_mut_refs"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7"
bare-metal = { git = "https://github.com/rust-embedded/bare-metal.git", rev = "577042c6d9446ea2806c155a75e68ca8da50866c"}
